--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'dev.sweety'
@@ -15,4 +16,17 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.9'
 
+}
+
+java {
+    toolchain {
+        sourceCompatibility = '21'
+        targetCompatibility = '21'
+    }
+}
+
+shadowJar {
+    archiveBaseName.set('sql4j')
+    archiveClassifier.set('')
+    archiveVersion.set(version)
 }
