--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.github.Mucoloff'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 repositories {
     mavenCentral()
@@ -37,5 +37,6 @@ java {
 shadowJar {
     archiveBaseName.set('Sql4J')
     archiveClassifier.set('')
-    archiveVersion.set(version)
+    archiveVersion.set(version + '-compiled')
 }
+
