Refactor build configuration to set archive version without '-compiled' suffix and re-enable shadowJar command in jitpack.yml

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,6 @@ java {
 shadowJar {
     archiveBaseName.set('Sql4J')
     archiveClassifier.set('')
-    archiveVersion.set(version + '-compiled')
+    archiveVersion.set(version)
 }
 
