--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,13 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
 
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+
+}
+
+test {
+    useJUnitPlatform()
 }
 
 publishing {
