--- a/build.gradle
+++ b/build.gradle
@@ -12,17 +12,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'mysql:mysql-connector-java:8.0.33'
-    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
 
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.mysql:mysql-connector-j:9.4.0'
+    implementation 'org.xerial:sqlite-jdbc:3.50.3.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-
-}
-
-test {
-    useJUnitPlatform()
+    implementation 'com.google.code.gson:gson:2.13.2'
 }
 
 publishing {
